prevent scrollbar with tiny screen heights

--- a/web/RoboHome/robohome/plugins/plugin.css
+++ b/web/RoboHome/robohome/plugins/plugin.css
@@ -3,7 +3,8 @@ html, body {
 }
 html {
     width: 100%;
-    height: 99.5%;
+    height: 100%;
+    overflow: hidden;
 }
 body {
     height: 100%;
